# archiver-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy.yml  rust.yml
src/: bzip2.rs  gzip.rs  lib.rs  tar.rs  xz.rs  zip.rs
tests/: archive.rs  compressed.rs
tests/sample/: sample.tar  sample.tar.bz2  sample.tar.xz  sample.txt.xz
